<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Levin</string>
    <string name="notification_channel_name">Levin Service</string>
    <string name="notification_channel_description">Background torrent archiving</string>
    <string name="notification_title_running">Levin - Running</string>
    <string name="notification_title_paused">Levin - Paused</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_settings">Settings</string>
    
    <!-- Navigation -->
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    
    <!-- Stats Fragment -->
    <string name="stats_header">Statistics</string>
    <string name="session_stats">Session</string>
    <string name="lifetime_stats">Lifetime</string>
    <string name="status">Status</string>
    <string name="download_rate">Download</string>
    <string name="upload_rate">Upload</string>
    <string name="downloaded">Downloaded</string>
    <string name="uploaded">Uploaded</string>
    <string name="total_downloaded">Total Downloaded</string>
    <string name="total_uploaded">Total Uploaded</string>
    <string name="ratio">Ratio</string>
    <string name="active_torrents">Active Torrents</string>
    <string name="paused">Paused</string>
    <string name="status_running">Status: Running</string>
    <string name="status_paused">Status: Paused</string>
    <string name="network_section">Network</string>
    <string name="storage_section">Storage</string>
    <string name="torrents_section">Torrents</string>
    
    <!-- Settings -->
    <string name="settings_storage_category">Storage</string>
    <string name="settings_power_category">Power &amp; Network</string>
    <string name="settings_about_category">About</string>
    
    <string name="pref_min_free">Minimum Free Space (Required)</string>
    <string name="pref_min_free_summary">Always keep at least this much space free on device</string>
    <string name="pref_min_free_dialog_title">Minimum Free Space in GB (e.g., 5 or 1.5)</string>
    <string name="pref_max_storage">Maximum Storage (Optional)</string>
    <string name="pref_max_storage_summary">Limit Levin data to this size (leave empty for unlimited)</string>
    <string name="pref_max_storage_dialog_title">Maximum Storage in GB (e.g., 100) or leave empty</string>
    <string name="pref_watch_directory">Watch Directory</string>
    <string name="pref_data_directory">Data Directory</string>
    <string name="pref_run_on_battery">Run on Battery</string>
    <string name="pref_run_on_battery_summary">Continue downloading when unplugged</string>
    <string name="pref_run_on_cellular">Run on Cellular</string>
    <string name="pref_run_on_cellular_summary">Continue downloading on mobile data</string>
    <string name="pref_run_on_startup">Run on Startup</string>
    <string name="pref_run_on_startup_summary">Start Levin automatically when device boots</string>
    <string name="pref_version">Version</string>
    <string name="pref_licenses">Open Source Licenses</string>
    
    <!-- Stats metrics -->
    <string name="disk_used">Disk Used</string>
    <string name="disk_free">Disk Free</string>
    <string name="peers">Peers</string>
    <string name="pieces">Pieces</string>
</resources>
