<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_power_category">

        <SwitchPreferenceCompat
            android:key="run_on_startup"
            android:title="@string/pref_run_on_startup"
            android:summary="@string/pref_run_on_startup_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="run_on_battery"
            android:title="@string/pref_run_on_battery"
            android:summary="@string/pref_run_on_battery_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="run_on_cellular"
            android:title="@string/pref_run_on_cellular"
            android:summary="@string/pref_run_on_cellular_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_storage_category">

        <EditTextPreference
            android:key="min_free"
            android:title="@string/pref_min_free"
            android:summary="@string/pref_min_free_summary"
            android:dialogTitle="@string/pref_min_free_dialog_title"
            android:defaultValue="1"
            android:inputType="numberDecimal"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            android:key="max_storage"
            android:title="@string/pref_max_storage"
            android:summary="@string/pref_max_storage_summary"
            android:dialogTitle="@string/pref_max_storage_dialog_title"
            android:inputType="numberDecimal"
            app:useSimpleSummaryProvider="false" />

        <Preference
            android:key="watch_directory"
            android:title="@string/pref_watch_directory"
            android:summary="/Android/data/com.yoavmoshe.levin/files/torrents/"
            android:enabled="false" />

        <Preference
            android:key="data_directory"
            android:title="@string/pref_data_directory"
            android:summary="/Android/data/com.yoavmoshe.levin/files/data/"
            android:enabled="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about_category">

        <Preference
            android:key="version"
            android:title="@string/pref_version" />

    </PreferenceCategory>

</PreferenceScreen>
